    warning, rather than error.

    o updateObject does not warn about duplicating locked environment,
    unlesss verbose=TRUE

NEW FEATURES

    o 'combine' now works to combine rows of ExpressionSet

BUG FIXES

    o AnnotatedDataFrame 'show' listed additional varMetadata column
      names incorrectly when labelDescription was not the first.

NEWLY DEFUNCT CLASSES, METHODS, FUNCTIONS, DATA SETS

    o Defunct S4 Classes
       1) annotatedDataset - class definition still exits to support phenoData conversion
       2) exprMatrix - removed class definition
       3) exprSet - class definition still exists to allow conversion to ExpressionSet
       4) phenoData - class definition still exists to allow conversion to AnnotatedDataFrame

    o Defunct Generics/Methods
       1) addVarMetadataEntry - S4 generic definition removed
       2) as.data.frame.exprSet - S3 method removed
       3) convertVarLabels - S4 generic definition removed
       4) eList - S4 methods remain with .Defunct messages
       5) "eList<-" - S4 methods remain with .Defunct messages
       6) exprs2excel - S4 generic definition removed
       7) getExpData - S4 methods remain with .Defunct messages
       8) geneNames - S4 methods remain with .Defunct messages
       9) "geneNames<-" - S4 methods remain with .Defunct messages
      10) getUnits - S4 generic definition removed
      11) getVarMetadata - S4 generic definition removed
      12) iter - S4 generic definition removed
      13) reporterInfo - S4 generic definition removed
      14) "reporterInfo<-" - S4 generic definition removed
      15) reporterNames - S4 methods remain with .Defunct messages
      16) "reporterNames<-" - S4 methods remain with .Defunct messages
      17) split (for use with exprSet objects) - S4 generic definition removed
      18) update2MIAME - S4 generic definition removed

    o Defunct functions
       1) df2pD - function stub with .Defunct message